Spoil even can happen for some time now even on providers opened exclusively (on the media change event). Update GELI to handle that situation.

PR:		201185
Submitted by:	Matthew D. Fuller

Former-commit-id: c5d9ec5663991b89d7a87f401bc2720a8043cc08